[workspace]
members = [
    "intel-sgx/aesm-client",
    "intel-sgx/async-usercalls",
    "intel-sgx/dcap-provider",
    "intel-sgx/dcap-ql-sys",
    "intel-sgx/dcap-ql",
    #"intel-sgx/dcap-retrieve-pckid",
    "intel-sgx/enclave-runner",
    "intel-sgx/fortanix-sgx-abi",
    "intel-sgx/fortanix-sgx-tools",
    #"intel-sgx/ias",
    "intel-sgx/report-test",
    "intel-sgx/sgx_pkix",
    "intel-sgx/sgx-isa",
    "intel-sgx/sgxs-loaders",
    "intel-sgx/sgxs-tools",
    "intel-sgx/sgxs",
    "ipc-queue",
    "rs-libc",
]
exclude = [
    "examples",
    "intel-sgx/sgxs-loaders/tests/driver-crawler",
]
resolver = "2"
